# magic37-rust

./: .gitattributes  .gitignore  README.md  docker-compose.yaml  skaffold.local.yaml  skaffold.yaml
auth-provider/: Cargo.toml
auth-provider/config/: app.toml
auth-provider/src/: lib.rs  main.rs  repository.rs  service.rs  web.rs
auth-provider/src/domain/: user.rs
auth-provider/src/entity/: user.rs
auth-provider/src/repository/: impl.rs  user.rs
auth-provider/src/service/: authentication_service.rs
auth-provider/src/web/: rest.rs  rest_model.rs
auth-provider/src/web/rest/: authentication.rs  authentication_resource.rs
auth-provider/src/web/rest_model/: current_user_response.rs  current_user_response_rest_model.rs
services/auth-provider/: Dockerfile  skaffold.yaml
services/auth-provider/chart/: Chart.yaml  values-dev.yaml  values-local.yaml  values-prod.yaml  values.yaml
services/auth-provider/code/: Cargo.toml  Dockerfile  project.toml
services/auth-provider/code/src/: db.rs  web.rs
services/auth-provider/code/src/application/: container.rs
services/auth-provider/code/src/config/web/: error.rs
services/auth-provider/code/src/repository/impl/: user_impl.rs
services/auth-provider/code/src/service/: user.rs
services/auth-provider/code/src/service/impl/: user_impl.rs
services/auth-provider/code/src/web/: rest.rs  rest_model.rs
services/auth-provider/code/src/web/rest/: authentication.rs  model.rs
services/auth-provider/code/src/web/rest/model/: current_user_response.rs  login_request.rs
services/postgres/: skaffold.yaml
(+12 files in other folders)
