[package]
name = "auth-provider"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
sea-orm = { version = "2.0.0-rc.27", features = ["sqlx-postgres", "runtime-async-std-rustls", "macros", "with-chrono", "with-json", "with-uuid", "with-time"] }