[package]
name = "auth-provider"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-web-validator = "7"
validator = { version = "0.20", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
sea-orm = { version = "2.0.0-rc.27", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json", "with-uuid", "with-time"] }
async-trait = "0.1.89"
anyhow = "1.0.100"
derive_more = "2"
http-api-problem = { version = "0.60", features = ["actix-web"] }